--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nombre de tu empresa</title>
+  <title>Briccio</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="estilos.css">
 </head>
@@ -12,7 +12,7 @@
     <!-- HEADER --> 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <h1 class="mx-auto"><a class="navbar-brand" href="#">Nombre de la empresa</a></h1>
+      <h1 class="mx-auto"><a class="navbar-brand" href="#">Briccio</a></h1>
     </div>
   </nav>
   
@@ -27,7 +27,7 @@
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <h2 class="text-center">Equipo de trabajo</h2>
-      <p class="lead text-center">Presentacion miembros Equipo.</p>
+      <p class="lead text-center">Brissio Pablo - Centurion Facundo - Golzalez Alexander</p>
     </div>
   </div>
 
@@ -38,7 +38,7 @@
       <div class="card">
         <img class="card-img-top" src="zapa.jpg" alt="Imagen 1">
         <div class="card-body">
-          <p class="card-text">este producto es asdasdasd 1</p>
+          <p class="card-text">Producto Nro 1</p>
         </div>
       </div>
     </div>
@@ -46,7 +46,7 @@
       <div class="card">
         <img class="card-img-top" src="zapa.jpg" alt="Imagen 2">
         <div class="card-body">
-          <p class="card-text">este producto es asdasdasd 2</p>
+          <p class="card-text">Producto Nro 2</p>
         </div>
       </div>
     </div>
@@ -54,7 +54,7 @@
       <div class="card">
         <img class="card-img-top" src="zapa.jpg" alt="Imagen 3">
         <div class="card-body">
-          <p class="card-text">este producto es asdasdasd 3</p>
+          <p class="card-text">Producto Nro 3</p>
         </div>
       </div>
     </div>
@@ -62,7 +62,7 @@
       <div class="card">
         <img class="card-img-top" src="zapa.jpg" alt="Imagen 4">
         <div class="card-body">
-          <p class="card-text">este producto es asdasdasd 4</p>
+          <p class="card-text">Producto Nro 4</p>
         </div>
       </div>
     </div>
@@ -70,7 +70,7 @@
       <div class="card">
         <img class="card-img-top" src="zapa.jpg" alt="Imagen 5">
         <div class="card-body">
-          <p class="card-text">este producto es asdasdasd 5</p>
+          <p class="card-text">Producto Nro 5</p>
         </div>
       </div>
     </div>
@@ -78,7 +78,7 @@
       <div class="card">
         <img class="card-img-top" src="zapa.jpg" alt="Imagen 6">
         <div class="card-body">
-          <p class="card-text">este producto es asdasdasd 6</p>
+          <p class="card-text">Producto Nro 6</p>
         </div>
       </div>
     </div>
@@ -112,10 +112,10 @@
     <div class="col-md-6">
       <div class="card">
         <div class="card-body">
-          <h3 class="card-title">Cotización de producto</h3>
+          <h3 class="card-title">Cotización de un Producto</h3>
           <form id="cotizacion-form">
             <div class="mb-3">
-              <label for="producto-input" class="form-label">Producto</label>
+              <label for="producto-input" class="form-label">Producto a Cotizar</label>
               <input type="text" class="form-control" id="producto-input" required>
             </div>
             <div class="mb-3">
@@ -136,9 +136,9 @@
           <h4 class="text-center mb-4">Conoce más sobre nosotros</h4>
           <hr>
           <div class="row justify-content-center">
-            <a href="https://www.instagram.com/tu_cuenta_de_instagram/" target="_blank" rel="noopener"><p>IG</p><i class="fab fa-instagram fa-2x mx-3"></i></a>
-            <a href="https://twitter.com/tu_cuenta_de_twitter/" target="_blank" rel="noopener"><p>TW</p><i class="fab fa-twitter fa-2x mx-3"></i></a>
-            <a href="https://www.tiktok.com/@tu_cuenta_de_tiktok/" target="_blank" rel="noopener"><p>TT</p><i class="fab fa-tiktok fa-2x mx-3"></i></a>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener"><p>IG</p><i class="fab fa-instagram fa-2x mx-3"></i></a>
+            <a href="https://twitter.com" target="_blank" rel="noopener"><p>TW</p><i class="fab fa-twitter fa-2x mx-3"></i></a>
+            <a href="https://www.tiktok.com" target="_blank" rel="noopener"><p>TT</p><i class="fab fa-tiktok fa-2x mx-3"></i></a>
           </div>
         </div>
       </div>
