--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Briccio</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
@@ -128,6 +129,7 @@
       </div>
     </div>
   </div>
+  
 
     <!-- FOOTER -->
     <footer class="container-fluid bg-light py-3">
@@ -136,9 +138,9 @@
           <h4 class="text-center mb-4">Conoce más sobre nosotros</h4>
           <hr>
           <div class="row justify-content-center">
-            <a href="https://www.instagram.com" target="_blank" rel="noopener"><p>IG</p><i class="fab fa-instagram fa-2x mx-3"></i></a>
-            <a href="https://twitter.com" target="_blank" rel="noopener"><p>TW</p><i class="fab fa-twitter fa-2x mx-3"></i></a>
-            <a href="https://www.tiktok.com" target="_blank" rel="noopener"><p>TT</p><i class="fab fa-tiktok fa-2x mx-3"></i></a>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="bi bi-instagram logos_redes"></i><p class="redes_sociales">Instagram</p></a>
+            <a href="https://twitter.com" target="_blank" rel="noopener"><i class="bi bi-twitter logos_redes"></i><p class="redes_sociales">Twitter</p></a>
+            <a href="https://www.tiktok.com" target="_blank" rel="noopener"><i class="bi bi-tiktok logos_redes"></i><p class="redes_sociales">Tik Tok</p></a>
           </div>
         </div>
       </div>
