--- a/index.html
+++ b/index.html
@@ -172,15 +172,15 @@
           <form id="contact-form">
             <div class="mb-3">
               <label for="nombre-input" class="form-label">Nombre y Apellido</label>
-              <input type="text" class="form-control" id="nombre-input">
+              <input type="text" class="form-control" id="nombre-input" placeholder="Nombre y Apellido">
             </div>
             <div class="mb-3">
               <label for="correo-input" class="form-label">Correo electrónico</label>
-              <input type="email" class="form-control" id="correo-input">
+              <input type="email" class="form-control" id="correo-input" placeholder="Correo electrónico">
             </div>
             <div class="mb-3">
               <label for="telefono-input" class="form-label">Teléfono</label>
-              <input type="tel" class="form-control" id="telefono-input">
+              <input type="tel" class="form-control" id="telefono-input" placeholder="Teléfono">
             </div>
             <button type="submit" class="btn btn-primary">Enviar</button>
           </form>
@@ -195,11 +195,11 @@
           <form id="cotizacion-form">
             <div class="mb-3">
               <label for="producto-input" class="form-label">Producto a Cotizar</label>
-              <input type="text" class="form-control" id="producto-input">
+              <input type="text" class="form-control" id="producto-input" placeholder="Producto a Cotizar">
             </div>
             <div class="mb-3">
               <label for="cotizacion-correo-input" class="form-label">Correo electrónico</label>
-              <input type="email" class="form-control" id="cotizacion-correo-input">
+              <input type="email" class="form-control" id="cotizacion-correo-input" placeholder="Cooreo Electrónico">
             </div>
             <button type="submit" class="btn btn-primary">Enviar</button>
           </form>
